--- a/featured-movies.html
+++ b/featured-movies.html
@@ -36,7 +36,7 @@
 
                     <div class="navbar-brand">
                         <a href="Homepage.html" class="navbar-logo"><img src="assets/images/com-128x128.png" alt="Movie Ticket" title="Movie Ticket"></a>
-                        <a class="navbar-caption" href="Homepage.html">MOVIETICKET<br><br></a>
+                        <a class="navbar-caption" href="homepage.html">MOVIETICKET<br><br></a>
                     </div>
 
                 </div>
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="Homepage.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Featured-Movies.html" aria-expanded="false">FEATURED MOVIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="homepage.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured-movies.html" aria-expanded="false">FEATURED MOVIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-r" style="background-color: rgb(242, 242, 242); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-r" style="background-color: rgb(242, 242, 242); padding-top: 90px; padding-bottom: 0px;">
 
     
     <div class="container">
