--- a/homepage.html
+++ b/homepage.html
@@ -33,8 +33,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="Homepage.html" class="navbar-logo"><img src="assets/images/com-128x128.png" alt="Movie Ticket" title="Movie Ticket"></a>
-                        <a class="navbar-caption" href="Homepage.html">MOVIETICKET<br><br></a>
+                        <a href="homepage.html" class="navbar-logo"><img src="assets/images/com-128x128.png" alt="Movie Ticket" title="Movie Ticket"></a>
+                        <a class="navbar-caption" href="homepage.html">MOVIETICKET<br><br></a>
                     </div>
 
                 </div>
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="Homepage.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Featured-Movies.html" aria-expanded="false">FEATURED MOVIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="homepage.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured-movies.html" aria-expanded="false">FEATURED MOVIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -65,7 +65,7 @@
 
             <div class="mbr-table-md-up">
               <div class="mbr-table-cell col-md-4">
-                  <div class="text-xs-center"><a class="btn btn-primary" href="Featured-Movies.html">VIEW FEATURED MOVIES HERE</a></div>
+                  <div class="text-xs-center"><a class="btn btn-primary" href="featured-movies.html">VIEW FEATURED MOVIES HERE</a></div>
               </div>
               <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
                   <h3 class="mbr-info-title mbr-section-title display-2">WELCOME TO<br>MOVIE<br>TICKET</h3>
