--- a/the-boss-baby-2017.html
+++ b/the-boss-baby-2017.html
@@ -35,7 +35,7 @@ Watch Full Movies Online For Free">
 
                     <div class="navbar-brand">
                         <a href="Homepage.html" class="navbar-logo"><img src="assets/images/com-128x128.png" alt="Movie Ticket" title="Movie Ticket"></a>
-                        <a class="navbar-caption" href="Homepage.html">MOVIETICKET<br><br></a>
+                        <a class="navbar-caption" href="homepage.html">MOVIETICKET<br><br></a>
                     </div>
 
                 </div>
@@ -45,7 +45,7 @@ Watch Full Movies Online For Free">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="Homepage.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Featured-Movies.html" aria-expanded="false">FEATURED MOVIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="homepage.html">OVERVIEW</a></li><li class="nav-item dropdown"><a class="nav-link link" href="featured-movies.html" aria-expanded="false">FEATURED MOVIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@ Watch Full Movies Online For Free">
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-15" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-15" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
