create github pages

--- a/featured-movies.html
+++ b/featured-movies.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-r" style="background-color: rgb(242, 242, 242); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box1-r" style="background-color: rgb(242, 242, 242); padding-top: 90px; padding-bottom: 0px;">
 
     
     <div class="container">
