--- a/homepage.html
+++ b/homepage.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-c" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-c" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
 
     
     <div class="container">
@@ -84,8 +84,6 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
@@ -93,6 +91,5 @@
   
   
   <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
