--- a/watch-the-boss-baby-2017.html
+++ b/watch-the-boss-baby-2017.html
@@ -76,7 +76,7 @@ Watch Full Movies Online For Free">
                   <h3 class="mbr-section-title display-2"><span style="font-weight: normal;"><em>ANIMATION, COMEDY, FEATURED, FAMILY</em></span><br><br>The Boss Baby (2017) Movie<br><br><br><div>Please wait for the video to load.</div><div>It still depends on how fast your internet connection.</div></h3>
                   
 
-                  
+                  <div><a class="btn btn-primary" href="https://openload.co/embed/cNy7f7ZcdZY/videoplayback.mp4">THE BOSS BABY (2017)<br></a> </div>
               </div>
 
 
@@ -100,8 +100,6 @@ Watch Full Movies Online For Free">
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
@@ -109,6 +107,5 @@ Watch Full Movies Online For Free">
   
   
   <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
