--- a/watch-fate-of-the-furious-2017.html
+++ b/watch-fate-of-the-furious-2017.html
@@ -76,7 +76,7 @@ Watch Full Movies Online For Free">
                   <h3 class="mbr-section-title display-2"><span style="font-weight: normal;"><em>ACTION, CRIME, FEATURED, THRILLER</em></span><br><br>The Fate Of The Furious (2017) MOVIE<br><br><br><div>Please wait for the video to load.</div><div>It still depends on how fast your internet connection.</div></h3>
                   
 
-                  <div><a class="btn btn-primary" href="https://openload.co/embed/cNy7f7ZcdZY/videoplayback.mp4">THE FATE OF THE FURIOUS (2017)</a> </div>
+                  <div><a class="btn btn-primary" href="watch-fate-of-the-furious-2017.html">THE FATE OF THE FURIOUS (2017)</a> </div>
               </div>
 
 
