--- a/watch-john-wick-chapter-2-2017.html
+++ b/watch-john-wick-chapter-2-2017.html
@@ -58,7 +58,7 @@ Watch Full Movies Online For Free">
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-1b" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box4-1b" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -76,7 +76,7 @@ Watch Full Movies Online For Free">
                   <h3 class="mbr-section-title display-2"><span style="font-weight: normal;"><em>ACTION, CRIME, FEATURED, THRILLER</em></span><br><br>JOHN WICK CHAPTER: 2 (2017) MOVIE<br><br>Please wait for the video to load.<br>It still depends on how fast your internet connection.</h3>
                   
 
-                  <div><a class="btn btn-primary" href="https://openload.co/embed/cNy7f7ZcdZY/videoplayback.mp4">JOHN WICK CHAPTER: 2 (2017)</a> </div>
+                  <div><a class="btn btn-primary" href="watch-john-wick-chapter-2-2017.html">JOHN WICK CHAPTER: 2 (2017)</a> </div>
               </div>
 
 
